Fixed Card word wrap

--- a/src/components/arte-ruim/Card.scss
+++ b/src/components/arte-ruim/Card.scss
@@ -24,7 +24,7 @@
     font-size: 1em;
     font-weight: bolder;
     padding: get-unit(3 4 1);
-    white-space: nowrap;
+    // white-space: nowrap;
   }
 
   &__level {
